--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ header {
 
 .navbar > ul > li > a {
   font-family: "DynaPuff", cursive;
-  color: #454545;
+  color: black;
   font-weight: 700;
 }
 .search {
@@ -55,7 +55,7 @@ header {
 }
 .search > input {
   padding: 1em;
-  border: 2px solid #454545;
+  border: 2px solid black;
   border-radius: 30px;
   font-family: "DynaPuff", cursive;
   background: transparent;
@@ -69,7 +69,7 @@ header {
   margin-left: 0.2em;
   font-size: 2rem;
   font-weight: 700;
-  color: #454545;
+  color: black;
 }
 
 /* *Main */
@@ -100,7 +100,7 @@ main {
 .left > h1 {
   font-size: 3rem;
   font-weight: bold;
-  color: #454545;
+  color: black;
 }
 .left span {
   font-family: "Pacifico", cursive;
@@ -111,13 +111,13 @@ main {
   padding: 1em;
   border: none;
   border-radius: 5px;
-  background: #454545;
+  background: black;
   color: #fff3e2;
   cursor: pointer;
   font-family: "DynaPuff", cursive;
 }
-.left > button:hover{
-  color: #454545;
+.left > button:hover {
+  color: black;
   filter: brightness(0.5);
   transition: all ease-in-out 0.3s;
 }
@@ -232,19 +232,19 @@ main {
 p {
   font-family: "DynaPuff", cursive;
 }
-.card-wrapper-text{
-    padding: 1em;
+.card-wrapper-text {
+  padding: 1em;
 }
 .card-wrapper > button {
   padding: 1em;
   border: none;
   border-radius: 5px;
-  background: #454545;
+  background: black;
   color: #fff3e2;
   cursor: pointer;
   font-family: "DynaPuff", cursive;
 }
-.card-wrapper > button:hover{
+.card-wrapper > button:hover {
   filter: brightness(0.5);
   transition: all ease-in-out 0.3s;
 }
@@ -267,10 +267,10 @@ p {
   font-family: "DynaPuff", cursive;
   font-size: 2rem;
 }
-.contact-form{
+.contact-form {
   font-family: "DynaPuff", cursive;
 }
-.contact-form input{
+.contact-form input {
   padding: 1em;
   margin-bottom: 1em;
   border: none;
@@ -278,24 +278,56 @@ p {
   width: 100%;
   font-family: "DynaPuff", cursive;
 }
-.contact-form input:focus{
+.contact-form input:focus {
   outline: none;
 }
 #submit-form {
   padding: 1em;
   border: none;
   border-radius: 5px;
-  background: #454545;
+  background: black;
   color: #fff3e2;
   cursor: pointer;
   font-family: "DynaPuff", cursive;
 }
-#submit-form:hover{
+#submit-form:hover {
   filter: brightness(0.5);
   transition: all ease-in-out 0.3s;
 }
 
 /* *Footer */
+footer {
+  background: #e74646;
+  width: 100%;
+}
+.footer-wrapper {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 1em;
+  font-family: "DynaPuff", cursive;
+  color: #fff3e2;
+}
+.footer-text,
+.footer-link,
+.footer-contact {
+  margin: 1em;
+  flex-grow: 1;
+  flex-basis: 300px;
+  text-align: center;
+}
+.footer-text p,.footer-link li, .footer-contact li, .footer-link a{
+  color: black;
+  margin-top: 1em;
+}
+.copyright {
+  width: 100%;
+  text-align: center;
+  font-family: "DynaPuff", cursive;
+  color: #fff3e2;
+  padding: 1em;
+}
 /* ! Custom */
 .w-max {
   max-width: 1200px !important;
@@ -310,13 +342,4 @@ p {
   font-family: "Lato", sans-serif;
   font-family: "Libre Baskerville", serif;
   font-family: "Pacifico", cursive;
-}
-
-/* *Colors */
-.color {
-  color: #e74646;
-  color: #fa9884;
-  color: #ffe5ca;
-  color: #fff3e2;
-  color: #454545;
 }
