--- a/style.css
+++ b/style.css
@@ -7,21 +7,30 @@
   text-decoration: none;
 }
 
+body {
+  position: relative;
+}
+
 /* *Header */
 header {
   display: flex;
   justify-content: center;
 }
 .header-wrapper {
+  z-index: 9999999;
   background-color: transparent;
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1em;
-  /* margin: 0 auto; */
   position: fixed;
-  z-index: 999999;
+}
+.scroll {
+  background: #e74646 !important;
+  transition: all ease-in-out 0.3s;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px,
+    rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
 }
 
 .logo > h1 {
@@ -29,6 +38,20 @@ header {
   font-size: 2rem;
   font-weight: bold;
   color: #ffe5ca;
+}
+
+.active-navbar {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background: #e74646;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column !important;
+}
+.close-btn {
+  display: none;
 }
 
 .navbar > ul {
@@ -60,6 +83,9 @@ header {
   font-family: "DynaPuff", cursive;
   background: transparent;
 }
+.search > input::placeholder {
+  color: black;
+}
 .search > input:focus {
   outline: none;
 }
@@ -70,6 +96,11 @@ header {
   font-size: 2rem;
   font-weight: 700;
   color: black;
+}
+.bar {
+  display: none;
+  font-size: 2rem;
+  cursor: pointer;
 }
 
 /* *Main */
@@ -109,17 +140,28 @@ main {
 }
 .left > button {
   padding: 1em;
-  border: none;
+  border: 2px solid transparent;
   border-radius: 5px;
   background: black;
   color: #fff3e2;
   cursor: pointer;
   font-family: "DynaPuff", cursive;
+  margin-bottom: 3em;
 }
 .left > button:hover {
+  border: 2px solid black;
   color: black;
-  filter: brightness(0.5);
+  background: transparent;
   transition: all ease-in-out 0.3s;
+}
+.social a {
+  margin-right: 0.5em;
+  font-size: 2rem;
+  color: black;
+}
+.social i:hover {
+  transform: scale(1.3);
+  transition: all ease-in-out 0.2s;
 }
 .right {
   width: 100%;
@@ -237,7 +279,7 @@ p {
 }
 .card-wrapper > button {
   padding: 1em;
-  border: none;
+  border: 2px solid transparent;
   border-radius: 5px;
   background: black;
   color: #fff3e2;
@@ -245,7 +287,9 @@ p {
   font-family: "DynaPuff", cursive;
 }
 .card-wrapper > button:hover {
-  filter: brightness(0.5);
+  border: 2px solid black;
+  color: black;
+  background: transparent;
   transition: all ease-in-out 0.3s;
 }
 /* *Contact */
@@ -283,7 +327,7 @@ p {
 }
 #submit-form {
   padding: 1em;
-  border: none;
+  border: 2px solid transparent;
   border-radius: 5px;
   background: black;
   color: #fff3e2;
@@ -291,7 +335,9 @@ p {
   font-family: "DynaPuff", cursive;
 }
 #submit-form:hover {
-  filter: brightness(0.5);
+  border: 2px solid black;
+  color: black;
+  background: transparent;
   transition: all ease-in-out 0.3s;
 }
 
@@ -317,7 +363,10 @@ footer {
   flex-basis: 300px;
   text-align: center;
 }
-.footer-text p,.footer-link li, .footer-contact li, .footer-link a{
+.footer-text p,
+.footer-link li,
+.footer-contact li,
+.footer-link a {
   color: black;
   margin-top: 1em;
 }
@@ -336,10 +385,50 @@ footer {
   margin-bottom: 1em !important;
 }
 
-/* *Fonts */
-.font {
-  font-family: "DynaPuff", cursive;
-  font-family: "Lato", sans-serif;
-  font-family: "Libre Baskerville", serif;
-  font-family: "Pacifico", cursive;
+/* ! Responsive */
+@media all and (max-width: 1000px) {
+  nav{
+    display: none;
+  }
+  .close-btn{
+    display: block;
+  }
+  .bar {
+    display: block;
+  }
+  #hero {
+    padding: 20vw 10vw !important;
+  }
+  .about-img > h1 {
+    font-size: 2rem !important;
+  }
+  .about-text > h1 {
+    font-size: 1.5rem !important;
+  }
+  .product-text > h1 {
+    font-size: 1.5rem !important;
+  }
+  .contact-text > h1 {
+    font-size: 1.5rem !important;
+  }
+  .card-wrapper > img {
+    max-height: 200px !important;
+  }
+  .card-wrapper-text {
+    padding: 0.5em !important;
+  }
+  .card-wrapper > button {
+    padding: 0.5em !important;
+  }
+  .footer-text,
+  .footer-link,
+  .footer-contact {
+    margin: 0.5em !important;
+  }
+  .footer-text p,
+  .footer-link li,
+  .footer-contact li,
+  .footer-link a {
+    margin-top: 0.5em !important;
+  }
 }
