--- a/style.css
+++ b/style.css
@@ -5,19 +5,17 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
-}
-
-body {
-  position: relative;
+  scroll-behavior: smooth;
 }
 
 /* *Header */
 header {
   display: flex;
   justify-content: center;
+  position: relative;
 }
 .header-wrapper {
-  z-index: 9999999;
+  z-index: 99;
   background-color: transparent;
   width: 100%;
   display: flex;
@@ -29,31 +27,18 @@ header {
 .scroll {
   background: #e74646 !important;
   transition: all ease-in-out 0.3s;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px,
     rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
 }
 
-.logo > h1 {
+.logo > h1 a {
   font-family: "Pacifico", cursive;
   font-size: 2rem;
   font-weight: bold;
   color: #ffe5ca;
 }
-
-.active-navbar {
-  position: absolute;
-  width: 100%;
-  height: 100vh;
-  background: #e74646;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column !important;
-}
-.close-btn {
-  display: none;
-}
-
 .navbar > ul {
   display: flex;
   align-items: center;
@@ -68,6 +53,10 @@ header {
   font-family: "DynaPuff", cursive;
   color: black;
   font-weight: 700;
+  transition: all .3s;
+}
+.navbar > ul > li > a:hover {
+  color: #ffe5ca;
 }
 .search {
   display: flex;
@@ -99,10 +88,57 @@ header {
 }
 .bar {
   display: none;
+  font-size: 3rem;
+  cursor: pointer;
+  color: #fff3e2;
+}
+.active-header {
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.navbar-min{
+  position: sticky;
+  display: none;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: #e74646;
+  z-index: 999;
+}
+.navbar-min > ul{
+  text-align: center;
+}
+.navbar-min > ul > li{
+  margin: 2em 0;
+}
+.navbar-min > ul > li > a{
+  color: black;
   font-size: 2rem;
+  font-family: "DynaPuff", cursive;
+}
+.navbar-min > ul > li > a:hover{
+  color: #ffe5ca;
+  transition: all .3s;
+}
+.close-btn{
+  position: absolute;
+  top: 1em;
+  right: 50;
+}
+.close-btn > button{
+  color: #fff3e2;
+  background: transparent;
+  font-size: 3rem;
+  border: none;
   cursor: pointer;
 }
 
+.no-scroll{
+  overflow: hidden;
+}
 /* *Main */
 main {
   width: 100%;
@@ -157,7 +193,7 @@ main {
 .social a {
   margin-right: 0.5em;
   font-size: 2rem;
-  color: black;
+  color: #ffe5ca;
 }
 .social i:hover {
   transform: scale(1.3);
@@ -176,7 +212,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 2em 1em;
+  padding: 6em 1em;
 }
 .about-wrapper {
   width: 100%;
@@ -229,7 +265,7 @@ main {
   width: 100%;
   display: flex;
   justify-content: center;
-  padding: 2em 1em;
+  padding: 6em 1em;
 }
 .product-wrapper {
   width: 100%;
@@ -298,7 +334,7 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 2em 1em;
+  padding: 6em 2em;
 }
 .contact-wrapper {
   background: #fa9884;
@@ -306,6 +342,9 @@ p {
   text-align: center;
   padding: 1em;
   border-radius: 10px;
+}
+.contact-text{
+  margin-bottom: 2em;
 }
 .contact-text > h1 {
   font-family: "DynaPuff", cursive;
@@ -316,7 +355,7 @@ p {
 }
 .contact-form input {
   padding: 1em;
-  margin-bottom: 1em;
+  margin-bottom: 2.5em;
   border: none;
   border-radius: 10px;
   width: 100%;
@@ -339,6 +378,9 @@ p {
   color: black;
   background: transparent;
   transition: all ease-in-out 0.3s;
+}
+#status{
+  transform: scale(1.5);
 }
 
 /* *Footer */
@@ -390,45 +432,43 @@ footer {
   nav{
     display: none;
   }
-  .close-btn{
-    display: block;
-  }
   .bar {
     display: block;
   }
   #hero {
-    padding: 20vw 10vw !important;
+    padding: 20vw 10vw ;
   }
   .about-img > h1 {
-    font-size: 2rem !important;
+    font-size: 2rem ;
   }
   .about-text > h1 {
-    font-size: 1.5rem !important;
+    font-size: 1.5rem ;
   }
   .product-text > h1 {
-    font-size: 1.5rem !important;
+    font-size: 1.5rem ;
   }
   .contact-text > h1 {
-    font-size: 1.5rem !important;
+    font-size: 1.5rem ;
   }
   .card-wrapper > img {
-    max-height: 200px !important;
+    max-height: 200px ;
   }
   .card-wrapper-text {
-    padding: 0.5em !important;
+    padding: 0.5em ;
   }
   .card-wrapper > button {
-    padding: 0.5em !important;
+    font-size: 1rem ;
+    padding: 0.5em ;
   }
   .footer-text,
   .footer-link,
   .footer-contact {
-    margin: 0.5em !important;
+    margin: 0.5em ;
   }
   .footer-text p,
   .footer-link li,
   .footer-contact li,
   .footer-link a {
-    margin-top: 0.5em !important;
+    margin-top: 0.5em ;
   }
 }
