--- a/style.css
+++ b/style.css
@@ -412,6 +412,10 @@ footer {
   color: black;
   margin-top: 1em;
 }
+.footer-link a:hover{
+  color: #fff3e2;
+  transition: all .3s;
+}
 .copyright {
   width: 100%;
   text-align: center;
